test/zinc_source/compile_errors/callables/14_channel_mixed_signature.zn
// expected-error: incompatible callable signatures for channel payload
fn inc(x) {
    return x + 1
}

fn add(a, b) {
    return a + b
}

fn main() {
    jobs = chan()
    jobs <- inc
    jobs <- add
}
